# h3ron

./: .gitattributes  .gitignore  .gitmodules  CHANGES.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.toml  justfile
.github/workflows/: ci.yml  rust.yml
data/: dlr-global-urban-footprint.xml  europe-and-north-africa.tif  graph-germany_r7_f64.bincode.lz
h3/: Cargo.toml
h3-ndarray/: Cargo.toml
h3-ndarray/benches/: convert_dataset_r.rs
h3-ndarray/examples/: h3ify_r_tiff.rs
h3-ndarray/src/: algo.rs  array.rs  array_util.rs  error.rs  lib.rs  resolution.rs  sphere.rs  transform.rs
h3-raster/: Cargo.toml
h3-raster/benches/: convert_dataset_r.rs
h3-raster/data/: land_shallow_topo_1024.tif  r.tiff
h3-raster/src/: convertedraster.rs  error.rs  geo.rs  geotransform.rs  input.rs  iter.rs  lib.rs  rasterconverter.rs  tile.rs
h3-sys/: Cargo.toml
h3-sys/src/: lib.rs
h3-util/: Cargo.toml
h3-util/src/: lib.rs  progress.rs
h3/src/: collections.rs  compact.rs  error.rs  experimental.rs  geo.rs  index.rs  lib.rs  localij.rs  stack.rs  util.rs
h3ron/: CHANGES.md  Cargo.toml  README.md
h3ron-graph/: CHANGES.md  Cargo.toml  README.md
h3ron-graph/benches/: route_germany.rs
h3ron-graph/doc/images/: edges-and-longedges.dot  justfile  prepared_h3_edge_graph.dot
h3ron-graph/examples/: graph_from_osm.rs
h3ron-graph/src/: error.rs  graph.rs  lib.rs  node.rs  routing.rs
h3ron-graph/src/algo/: differential_shortest_path.rs  mod.rs  shortest_path.rs
h3ron-graph/src/algorithm/: covered_area.rs  differential_shortest_path.rs  dijkstra.rs  mod.rs  nearest_graph_nodes.rs  path.rs  shortest_path.rs  within_weight_threshold.rs
h3ron-graph/src/formats/: mod.rs  osm.rs
h3ron-graph/src/graph/: h3edge.rs  longedge.rs  mod.rs  modifiers.rs  node.rs  prepared.rs
h3ron-graph/src/io/: gdal.rs  mod.rs  osm.rs  serde_util.rs
h3ron-h3-sys/: CHANGES.md  Cargo.toml  README.md  build.rs  update-prebuild-bindings.sh
h3ron-h3-sys/src/: geo.rs  lib.rs  prebuild_bindings.rs
h3ron-ndarray/: CHANGES.md  Cargo.toml  README.md
h3ron-ndarray/benches/: convert_dataset_r.rs
h3ron-ndarray/examples/: h3ify_r_tiff.rs
h3ron-ndarray/src/: array.rs  error.rs  lib.rs  resolution.rs  sphere.rs  transform.rs
h3ron-playground/: Cargo.toml
h3ron-playground/benches/: collections_insert_get.rs
h3ron-playground/src/collections/: cellhierarchy.rs  mod.rs
h3ron-polars/: CHANGES.md  Cargo.toml  README.md
h3ron-polars/benches/: spatialindex.rs
h3ron-polars/src/: chunkedarray.rs  error.rs  frame.rs  from.rs  iter.rs  lib.rs
h3ron-polars/src/algorithm/: bounding_rect.rs  chunkedarray.rs  mod.rs  tests.rs
h3ron-polars/src/algorithm/chunkedarray/: cell_clusters.rs  compact.rs  grid_disk.rs  mod.rs  resolution.rs  util.rs  valid.rs
h3ron-polars/src/algorithm/frame/: compact.rs  mod.rs  resolution.rs  valid.rs
h3ron-polars/src/spatial_index/: kdbush.rs  kdtree.rs  mod.rs  packed_hilbert_rtree.rs  rtree.rs  tests.rs
h3ron/benches/: cell_boundary.rs  collections_insert_get.rs  compressed_index_vec.rs  grid_disk_variants.rs  indexblock.rs  k_ring_variants.rs
h3ron/examples/compile_to_wasi/: Cargo.toml  Makefile  README.md
h3ron/examples/compile_to_wasi/src/: main.rs
h3ron/src/: algorithm.rs  cell.rs  collections.rs  directed_edge.rs  direction.rs  edge_index.rs  error.rs  experimental.rs  geo.rs  h3_cell.rs  h3_direction.rs  h3_edge.rs  hexagon_index.rs  index.rs  io.rs  iter.rs  lib.rs  localij.rs  to_geo.rs  to_h3.rs  to_linked_polygons.rs  util.rs
h3ron/src/algorithm/: cell_clusters.rs  mod.rs  smoothen.rs
h3ron/src/collections/: compactedcellvec.rs  compressed.rs  indexhierarchy.rs  indexvec.rs  mod.rs  partitioned.rs  treemap.rs
h3ron/src/collections/partitioned/: mod.rs  serde.rs
h3ron/src/collections/treemap/: mod.rs  serde.rs
h3ron/src/iter/: boundary.rs  edge.rs  grid_disk.rs  kring.rs  mod.rs  neighbor.rs  resolution.rs
h3ronpy/: Cargo.toml  MANIFEST.in  README.ipynb  README.md  documentation.ipynb  install-dev-depdendencies.py  justfile  pyproject.toml  requirements.dev.txt  requirements.documentation.txt
h3ronpy/h3ronpy/: __init__.py  array.py  pandas.py  raster.py  util.py  vector.py
h3ronpy/src/: array.rs  collections.rs  error.rs  lib.rs  polygon.rs  raster.rs  transform.rs  util.rs  vector.rs
h3ronpy/tests/: __init__.py  test_raster.py  test_util.py  test_vector.py
raster2h3/: Cargo.toml
raster2h3/src/: lib.rs  main.rs
src/: lib.rs
