[workspace]

members = [
    "h3ron",
    "h3ron/examples/compile_to_wasi",
    "h3ron-graph",
    "h3ron-h3-sys",
    "h3ron-ndarray",
    "h3ron-playground",
]
[profile.release]
debug = true # for flamegraph
lto = true
# lto = false # for callgrind

#debug = false
#lto = "fat"

[profile.bench]
debug = true
