[package]
name = "h3-ndarray"
version = "0.1.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2018"

[dependencies]
geo-types = "^0.6"

[dependencies.ndarray]
version = "^0.14"
features = [
    "rayon"
]

[dependencies.h3]
path = "../h3"
features = [
    "with-geo-types-0_6"
]
default_features = false

[dev-dependencies]
approx = "^0.4"

[dev-dependencies.gdal]
version = "^0.7"
features = [
    "array"
]