[package]
name = "h3-raster"
version = "0.1.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2018"

[features]
sqlite = [ "rusqlite" ]

[dependencies]
h3-sys = { path = "../h3-sys" }
h3 = { path = "../h3" }
geo-types = "0.4.0"
log = "0.4.8"
#gdal = { git = "https://github.com/georust/gdal", features = []} # needs unreleased version 0.6.0
gdal = "0.6.0"
gdal-sys = "0.2.0"
crossbeam = "0.7.3"
ordered-float = "1.0.2"
rusqlite = { version = "0.21.0", optional = true }

[dependencies.gdal-geotransform]
git = "https://github.com/nmandery/gdal-geotransform"
rev = "13fb64a40c4"
