[package]
name = "h3-sys"
version = "3.6.4" # version matches the bundled libh3
description = "bindings to libh3, bindgen generated, libh3 is bundled"
authors = ["Nico Mandery <nico@nmandery.net>"]
build = "build.rs"
license = "MIT"
edition = "2018"

[lib]

[build-dependencies]
bindgen = "^0.55"
cmake = "^0.1"
regex = "1.3"
