[package]
name = "h3ron-graph"
version = "0.3.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Graph algorithms on edges of th3 H3 spatial indexing system"
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3", "graph"]
readme = "../README.md"
homepage = "https://github.com/nmandery/h3ron"
repository = "https://github.com/nmandery/h3ron"
exclude = [
    "doc/images/*.dot",
    "doc/images/justfile",
]

[features]
use-gdal = ["gdal", "ordered-float"]
osm = ["osmpbfreader"]

[dependencies]
geo = "0.19"
geo-types = "0.7"
rayon = "^1.5"
log = "^0.4"
thiserror = "1.0"
indexmap = "1.7"
num-traits = "0.2"

[dependencies.h3ron]
path = "../h3ron"
version = "0.14.0" # for publishing on crates.io
features = ["rayon", "compression", "roaring", "use-serde"]

[dependencies.tinyvec]
version = "1"
features = ["serde"]

[dependencies.osmpbfreader]
version = "0.15"
optional = true

[dependencies.gdal]
version = "0.12.0"
optional = true
features = ["bindgen"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ordered-float]
version = "2.8"
features = ["serde"]
optional = true

#[dev-dependencies.geojson]
#version = "0.22"
#features = ["geo-types"]

[dev-dependencies.criterion]
version = "^0.3"
features = ["html_reports"]

[dev-dependencies.clap]
version = "^3"

[[bench]]
name = "route_germany"
required-features = ["ordered-float", "h3ron/io"]
harness = false

[[example]]
name = "graph_from_osm"
required-features = ["osm", "ordered-float", "h3ron/io"]
