[package]
name = "h3ron-graph"
version = "0.3.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Graph algorithms on edges of th3 H3 spatial indexing system"
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3", "graph"]
readme = "README.md"
homepage = "https://github.com/nmandery/h3ron"
repository = "https://github.com/nmandery/h3ron"
exclude = [
    "doc/images/*.dot",
    "doc/images/justfile",
]

[features]
io_gdal = ["gdal", "ordered-float"]
io_osm = ["osmpbfreader"]
io_serde_util = ["bincode", "lz4_flex", "h3ron/use-serde"]

[dependencies]
geo = "0.21"
geo-types = "0.7"
rayon = "^1.5"
log = "^0.4"
thiserror = "1.0"
indexmap = "1.7"
num-traits = "0.2"

[dependencies.h3ron]
path = "../h3ron"
version = "0.14.0" # for publishing on crates.io
features = ["use-rayon", "roaring", "use-serde"]

[dependencies.smallvec]
version = "^1.8"
features = ["serde"]

[dependencies.osmpbfreader]
version = "0.15"
optional = true

[dependencies.gdal]
version = "0.12.0"
optional = true
features = ["bindgen"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ordered-float]
version = "3"
features = ["serde"]
optional = true

[dependencies.lz4_flex]
version = "0.9"
optional = true

[dependencies.bincode]
version = "1"
optional = true


#[dev-dependencies.geojson]
#version = "0.22"
#features = ["geo-types"]

[dev-dependencies.criterion]
version = "^0.3"
features = ["html_reports"]

[dev-dependencies.clap]
version = "^3"

[[bench]]
name = "route_germany"
required-features = ["ordered-float"]
harness = false

[[example]]
name = "graph_from_osm"
required-features = ["io_osm", "ordered-float", "io_serde_util"]
