[package]
name = "h3ron-h3-sys"
version = "0.16.0"
description = "bindgen-generated lowlevel bindings for statically linked libh3"
authors = ["Nico Mandery <nico@nmandery.net>"]
build = "build.rs"
license = "MIT"
edition = "2021"
keywords = ["geo", "spatial", "h3"]
readme = "README.md"
homepage = "https://github.com/nmandery/h3ron"
repository = "https://github.com/nmandery/h3ron"
exclude = [
    "libh3/cmake",
    "libh3/CMakeLists.txt",
    "libh3/CMakeTests.cmake",
    "libh3/dev-docs",
    "libh3/docs",
    "libh3/examples",
    "libh3/.git",
    "libh3/.github",
    "libh3/KML",
    "libh3/scripts",
    "libh3/src/apps",
    "libh3/tests",
    "libh3/website",
    "update-prebuild-bindings.sh"
]

[package.metadata.docs.rs]
all-features = true

[lib]

[dependencies.geo-types]
version = "0.7"
optional = true

[build-dependencies]
bindgen = { version = "^0.64", optional = true }
regex = "^1.5.5"
cc = "1"
glob = "0.3"
