[package]
name = "h3ron-ndarray"
version = "0.9.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Integration with the ndarray crate to generate H3 data from raster data (using gdal, ...)"
edition = "2018"
license = "MIT"
keywords = ["geo", "spatial", "h3", "ndarray"]
readme = "../README.md"
homepage = "https://github.com/nmandery/h3ron"
repository = "https://github.com/nmandery/h3ron"

[dependencies]
geo-types = "^0.6"
rayon = "^1.5"
log = "^0.4"

[dependencies.ndarray]
version = "^0.14"
features = ["rayon"]

[dependencies.h3ron]
path = "../h3ron"
version = "0.9.0" # for publishing on crates.io


[dev-dependencies]
approx = "^0.4"
env_logger = "^0.8"
criterion = "^0.3"

[dev-dependencies.gdal]
version = "^0.7"
features = ["array"]


[[bench]]
name = "convert_dataset_r"
harness = false
