[package]
name = "h3ron-ndarray"
version = "0.13.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Integration with the ndarray crate to generate H3 cells from raster data (using gdal, ...)"
edition = "2018"
license = "MIT"
keywords = ["geo", "spatial", "h3", "ndarray"]
readme = "../README.md"
homepage = "https://github.com/nmandery/h3ron"
repository = "https://github.com/nmandery/h3ron"

[dependencies]
geo-types = "^0.7"
rayon = "^1.5"
log = "^0.4"
thiserror = "1.0"

[dependencies.ndarray]
version = "^0.15"
features = ["rayon"]

[dependencies.h3ron]
path = "../h3ron"
version = "0.13.0" # for publishing on crates.io


[dev-dependencies]
approx = "^0.5"
env_logger = "^0.9"

[dev-dependencies.criterion]
version = "^0.3"
features = ["html_reports"]

[dev-dependencies.gdal]
version = "^0.10"
features = ["array"]


[[bench]]
name = "convert_dataset_r"
harness = false
