[package]
name = "h3ron-playground"
description = "playground crate for experiments"
version = "0.1.0"
edition = "2021"
publish = false

[features]
use-serde = ["serde", "tinyvec/serde", "h3ron/use-serde"]

[dependencies]

[dependencies.tinyvec]
version= "1"

[dependencies.h3ron]
path = "../h3ron"

[dependencies.h3ron-h3-sys]
path = "../h3ron-h3-sys"

[dependencies.serde]
version = "^1.0"
features = [ "derive" ]
optional = true

[dev-dependencies.criterion]
version = "^0.3"
features = ["html_reports"]

[dev-dependencies.geo-types]
version = "^0.7"

[[bench]]
name = "collections_insert_get"
harness = false
