[package]
name = "h3ron-polars"
version = "0.1.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Integration of the h3 geospatial indexing system with polars dataframes"
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3", "polars"]
readme = "README.md"
homepage = "https://github.com/nmandery/h3ron"
repository = "https://github.com/nmandery/h3ron"

[package.metadata.docs.rs]
all-features = true

[features]

# spatial indexing
si_kdtree = ["dep:kdbush"]
si_rtree = ["dep:rstar", "geo-types/use-rstar_0_9"]
si_packed_hilbert_rtree = ["dep:static_aabb2d_index"]
si_full = ["si_kdtree", "si_rtree", "si_packed_hilbert_rtree"]

[dependencies]
geo = "0.23"
geo-types = "0.7"
kdbush = { version = "0.2", optional = true }
polars = { version = "0.24", features = ["lazy", "dtype-u8"] }
polars-core = "0.24"
thiserror = "1"
rstar = { version = "0.9", optional = true }
static_aabb2d_index = { version = "0.6", optional = true }

[dependencies.h3ron]
path = "../h3ron"
version = "0.15"

[dev-dependencies]
criterion = { version = "^0.4", features = ["html_reports"] }

[[bench]]
name = "spatialindex"
harness = false
required-features = ["si_full"]
