[package]
name = "h3ron"
description = "High-level rust API for H3"
version = "0.14.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3"]
readme = "../README.md"
homepage = "https://github.com/nmandery/h3ron"
repository = "https://github.com/nmandery/h3ron"

[features]
use-rayon = ["rayon", "hashbrown/rayon"]
io = ["bincode", "lz4_flex", "serde"]
compression = ["lz4_flex"]
use-serde = ["serde", "bincode", "hashbrown/serde"]
roaring-simd = ["roaring", "roaring/simd"]

[dependencies]
geo = "^0.19"
thiserror = "1.0"
svgbobdoc = "^0.2"
ahash = "0.7"

[dependencies.h3ron-h3-sys]
path = "../h3ron-h3-sys"
features = ["geo-types"]
version = "0.13.0" # for publishing on crates.io

[dependencies.geo-types]
version = "^0.7"

[dependencies.serde]
version = "^1.0"
features = [ "derive" ]
optional = true

[dependencies.hashbrown]
version = "0.12"
features = []

[dependencies.rayon]
version = "1.5"
optional = true

[dependencies.bincode]
version = "1"
optional = true

[dependencies.roaring]
version = "0.9"
optional = true

[dependencies.lz4_flex]
version = "0.9"
optional = true

[dev-dependencies]
bincode = "1"

#[dev-dependencies.geojson]
#version = "^0.22"
#features = ["geo-types"]

[dev-dependencies.criterion]
version = "^0.3"
features = ["html_reports"]

[[bench]]
name = "grid_disk_variants"
harness = false

[[bench]]
name = "collections_insert_get"
harness = false
required-features = ["compression"]

[[bench]]
name = "indexblock"
harness = false
required-features = ["compression"]

[[bench]]
name = "cell_boundary"
harness = false
