[package]
name = "h3ron"
description = "High-level rust API for H3"
version = "0.18.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3"]
readme = "README.md"
homepage = "https://github.com/nmandery/h3ron"
repository = "https://github.com/nmandery/h3ron"

[package.metadata.docs.rs]
all-features = true

[features]
use-rayon = ["hashbrown/rayon"]
use-serde = ["dep:serde", "hashbrown/serde"]
bindgen = ["h3ron-h3-sys/bindgen"]
parse = ["dep:nom"]
indexmap = ["dep:indexmap"]

[dependencies]
geo = "^0.27"
thiserror = "1.0"
ahash = "0.8"
indexmap = { version = "2", optional = true }

[dependencies.h3ron-h3-sys]
path = "../h3ron-h3-sys"
features = ["geo-types"]
version = "0.17" # for publishing on crates.io

[dependencies.geo-types]
version = "^0.7"

[dependencies.serde]
version = "^1.0"
features = [ "derive" ]
optional = true

[dependencies.hashbrown]
version = "0.14"
features = []

[dependencies.roaring]
version = "0.10"
optional = true

[dependencies.nom]
version = "7"
optional = true

[dev-dependencies]
bincode = "1"

#[dev-dependencies.geojson]
#version = "^0.22"
#features = ["geo-types"]

[dev-dependencies.criterion]
version = "^0.5"
features = ["html_reports"]

[[bench]]
name = "grid_disk_variants"
harness = false

[[bench]]
name = "collections_insert_get"
harness = false

[[bench]]
name = "indexblock"
harness = false

[[bench]]
name = "cell_boundary"
harness = false
