[package]
name = "h3ronpy"
version = "0.7.1"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "python bindings for h3ron"
edition = "2018"
license = "MIT"
keywords = ["geo", "spatial", "h3", "ndarray", "numpy", "python"]
readme = "README.md"
homepage = "https://github.com/nmandery/h3ron"
repository = "https://github.com/nmandery/h3ron"

[lib]
name = "h3ronpy"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]

[dependencies]
pyo3 = "0.13" # matches numpy crates requirements
numpy = "^0.13"
env_logger = "^0.8"
geo-types = "^0.6"

[dependencies.h3ron-ndarray]
path = "../h3ron-ndarray"
version = "0.7.1"

[dependencies.ndarray]
version = "0.14" # matches numpy crates requirements
features = ["rayon"]

[dependencies.h3ron]
path = "../h3ron"
version = "0.7.1"

[dependencies.h3ron-h3-sys]
path = "../h3ron-h3-sys"
version = "0.7.1"

[package.metadata.maturin]
# python dependencies of the generated package
requires-dist = [
    "numpy",
    "geopandas>=0.8",
    "h3>=3.7",
    "Shapely>=1.7",
]

